# edu-question-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: release_notes_v0.1.0.md  usage.md
edu_question_generator/: __init__.py  cli.py  exporter.py  generator.py  models.py
edu_question_generator/templates/: __init__.py  middle_school_math.json  middle_school_physics.json
examples/: README.md
examples/output/: math_algebra_easy_student.docx  math_algebra_easy_teacher.docx
tests/: test_exporter.py  test_generator.py
