[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-question-generator"
version = "0.1.0"
description = "Generate middle-school math and physics practice worksheets from editable templates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "edu-question-generator contributors" }
]
keywords = ["education", "worksheets", "math", "physics", "docx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
]
dependencies = [
  "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
edu-question-generator = "edu_question_generator.cli:main"

[tool.setuptools.packages.find]
include = ["edu_question_generator*"]

[tool.setuptools.package-data]
edu_question_generator = ["templates/*.json"]
